# RL-VLA

./: .gitignore  annotate_rlds.py  convert_rlds_subgoal.py  diagnose_features.py  diagnose_spatial.py  eval.py  eval_executor.py  eval_executor_ablation.py  libero_eval.py  libero_requirements.txt  pyproject.toml  run_pipeline.sh  train.py  train_encoder.py  train_subgoal_decoder.py  visualize_dataset.py
model/: executor.py  pi0_subgoal_decoder.py  subgoal_encoder.py  subgoal_encoder_v2.py
